--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "audio_ext"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["PerfectLaugh <denniswu81229@gmail.com>"]
 edition = "2018"
 build = "build.rs"
@@ -15,7 +15,7 @@ csgo = []
 protobuf = []
 
 [dependencies]
-async-std = { version = "1.6" }
+async-std = { version = "1.7" }
 byteorder = "1.3"
 cpp = "0.5"
 futures = "0.3"
@@ -28,6 +28,8 @@ cc = "1.0"
 cpp_build = "0.5"
 lazy_static = "1.4"
 
-[patch.crates-io]
-wepoll-sys-stjepang = { path = "wepoll-sys-stjepang" }
-smol = { git = "https://github.com/stjepang/smol", rev = "883366b9b51a0c234e4ba9c72d8f25edb19879a3" }
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
