--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,5 +27,6 @@ jobs:
         export SOURCEMOD="deps/sourcemod"
         export MMSOURCE="deps/mmsource"
         export HL2SDKCSGO="deps/hl2sdk-csgo"
+        ls -la deps/sourcemod/public/smsdk_ext.cpp
         cargo build --release
 
