--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Linux Build
 
 on:
   workflow_dispatch:
@@ -11,22 +11,40 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-linux:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Get Dependency
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Install Rust and target
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: i686-unknown-linux-gnu
+        override: true
+
+    - name: Install Linux cross-compilation dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc-multilib
+
+    - name: Git Clone Dependencies
       run: |
         git clone https://github.com/alliedmodders/sourcemod --recursive -b 1.10-dev deps/sourcemod
         git clone https://github.com/alliedmodders/metamod-source -b 1.10-dev deps/mmsource
         git clone https://github.com/alliedmodders/hl2sdk -b csgo deps/hl2sdk-csgo
-    - name: Build
-      run: | 
-        export SOURCEMOD="/home/runner/work/SM-Ext-Audio/SM-Ext-Audio/deps/sourcemod"
-        export MMSOURCE="/home/runner/work/SM-Ext-Audio/SM-Ext-Audio/deps/mmsource"
-        export HL2SDKCSGO="/home/runner/work/SM-Ext-Audio/SM-Ext-Audio/deps/hl2sdk-csgo"
-        ls -la "/home/runner/work/SM-Ext-Audio/SM-Ext-Audio/deps/sourcemod/public/smsdk_ext.cpp"
-        cargo build --release
 
+    - name: Build
+      run: |
+        export SOURCEMOD="${{ github.workspace }}/deps/sourcemod"
+        export MMSOURCE="${{ github.workspace }}/deps/mmsource"
+        export HL2SDKCSGO="${{ github.workspace }}/deps/hl2sdk-csgo"
+        cargo build --target i686-unknown-linux-gnu --release
+
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: linux
+        path: target/i686-unknown-linux-gnu/release/
