--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Checkout repository
@@ -29,7 +29,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y gcc-multilib
-        sudo apt-get install -y libstdc++-13-dev:i386 linux-libc-dev:i386
+        sudo apt-get install -y libstdc++-dev:i386
+        sudo apt-get install -y libc6-dev:i386
         sudo apt-get install -y libprotobuf-dev:i386 protobuf-compiler
 
     - name: Git Clone Dependencies
